[gd_scene load_steps=46 format=3 uid="uid://b7kga5w7hkr5o"]

[ext_resource type="Script" path="res://Scenes/Battle/battle.gd" id="1_f8vj8"]
[ext_resource type="Texture2D" uid="uid://dy7akiv6de2cp" path="res://bg_art/Preview/Background.png" id="1_hqwel"]
[ext_resource type="Resource" uid="uid://bq72ft87yg5kg" path="res://enemyResources/res_battle_spider.tres" id="2_72n72"]
[ext_resource type="Texture2D" uid="uid://ihlrkorw2pin" path="res://textures/bosses/boss_0_N.png" id="2_lio13"]
[ext_resource type="Texture2D" uid="uid://dwvjcsn3e1bam" path="res://textures/bosses/boss_12_S.png" id="3_8u46x"]
[ext_resource type="Texture2D" uid="uid://b7ahodrtnbkpr" path="res://test_sprites/fireball_lol.png" id="5_uugxd"]
[ext_resource type="Texture2D" uid="uid://cv5mk2thosujc" path="res://test_sprites/60FPS_AC2Q001_Slash.png" id="7_g8lpc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qufg"]
bg_color = Color(0.2016, 0.36, 0.2676, 0.423529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bj0i"]
resource_name = "hp_red"
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.697478, 0.0837584, 0.0305308, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ew2d"]
resource_name = "hp_full"
bg_color = Color(0.0189659, 0.596003, 3.85046e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr8gi"]
resource_name = "MP_empty"
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(1.68458e-07, 0.215394, 0.296514, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_472vc"]
resource_name = "MP_full"
bg_color = Color(6.16074e-06, 0.652973, 0.87947, 1)

[sub_resource type="Animation" id="Animation_1q8ej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyHP:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [50.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/Enemy:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:theme_override_constants/margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4b4wm"]
resource_name = "enemy_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:theme_override_constants/margin_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5, 0.566667, 0.8, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 10, 10, -20, -20, 0]
}

[sub_resource type="Animation" id="Animation_83e04"]
resource_name = "enemy_chillin"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Enemy:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_ojd68"]
resource_name = "enemy_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.233333, 0.308333, 0.366667, 0.441667, 0.533333, 0.608333, 0.666667, 0.741667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fuh57"]
resource_name = "enemy_dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xuy4y"]
resource_name = "enemy_healthchange"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyHP:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [50.0, 50.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrlsx"]
_data = {
"RESET": SubResource("Animation_1q8ej"),
"enemy_attack": SubResource("Animation_4b4wm"),
"enemy_chillin": SubResource("Animation_83e04"),
"enemy_damaged": SubResource("Animation_ojd68"),
"enemy_dead": SubResource("Animation_fuh57"),
"enemy_healthchange": SubResource("Animation_xuy4y")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_055hs"]
atlas = ExtResource("5_uugxd")
region = Rect2(0, 0, 580, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vwxa"]
atlas = ExtResource("5_uugxd")
region = Rect2(580, 0, 580, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajdio"]
atlas = ExtResource("5_uugxd")
region = Rect2(0, 160, 580, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryd2j"]
atlas = ExtResource("5_uugxd")
region = Rect2(580, 160, 580, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_5qdkq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_055hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vwxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajdio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryd2j")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0f2sd"]
atlas = ExtResource("7_g8lpc")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qv6s"]
atlas = ExtResource("7_g8lpc")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs3vh"]
atlas = ExtResource("7_g8lpc")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw4ll"]
atlas = ExtResource("7_g8lpc")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3esk"]
atlas = ExtResource("7_g8lpc")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyyon"]
atlas = ExtResource("7_g8lpc")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd87r"]
atlas = ExtResource("7_g8lpc")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_28oa2"]
atlas = ExtResource("7_g8lpc")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2ovn"]
atlas = ExtResource("7_g8lpc")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai7d3"]
atlas = ExtResource("7_g8lpc")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_24exv"]
atlas = ExtResource("7_g8lpc")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dq1n"]
atlas = ExtResource("7_g8lpc")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcpj8"]
atlas = ExtResource("7_g8lpc")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_trmgb"]
atlas = ExtResource("7_g8lpc")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqon2"]
atlas = ExtResource("7_g8lpc")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqmwq"]
atlas = ExtResource("7_g8lpc")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke38v"]
atlas = ExtResource("7_g8lpc")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iikf5"]
atlas = ExtResource("7_g8lpc")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e17tw"]
atlas = ExtResource("7_g8lpc")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a08rk"]
atlas = ExtResource("7_g8lpc")
region = Rect2(768, 576, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_pvakd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f2sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qv6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs3vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw4ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3esk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyyon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd87r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28oa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2ovn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai7d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24exv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dq1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcpj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trmgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqon2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqmwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke38v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iikf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e17tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a08rk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"slash",
"speed": 45.0
}]

[node name="battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 8.0
offset_right = -227.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.23983, 0.979368)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_f8vj8")
enemy = ExtResource("2_72n72")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.83937
offset_top = -144.991
offset_right = 9.83936
offset_bottom = -104.991
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hqwel")
expand_mode = 1

[node name="Panel_Menu" type="Panel" parent="."]
z_index = 1
layout_mode = 0
offset_left = 291.975
offset_top = 489.091
offset_right = 592.975
offset_bottom = 644.091
theme_override_styles/panel = SubResource("StyleBoxFlat_8qufg")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel_Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Menu/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PlayerHP" type="ProgressBar" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1bj0i")
theme_override_styles/fill = SubResource("StyleBoxFlat_7ew2d")
max_value = 1e+11
value = 0.3
show_percentage = false

[node name="Label" type="Label" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer/PlayerHP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "HP: 25/50"

[node name="PlayerMP" type="ProgressBar" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_lr8gi")
theme_override_styles/fill = SubResource("StyleBoxFlat_472vc")
max_value = 10.0
value = 8.0
show_percentage = false

[node name="Label" type="Label" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer/PlayerMP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "MP: 8/10"

[node name="CombatLog" type="Panel" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer/CombatLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="Panel_Menu/HBoxContainer/MarginContainer2/VBoxContainer/CombatLog"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nrlsx")
}

[node name="Panel_Menu2" type="Panel" parent="."]
z_index = 1
layout_mode = 2
offset_left = 20.9706
offset_top = 549.334
offset_right = 245.971
offset_bottom = 643.334
theme_override_styles/panel = SubResource("StyleBoxFlat_8qufg")

[node name="MarginActions" type="MarginContainer" parent="Panel_Menu2"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel_Menu2/MarginActions"]
layout_mode = 2

[node name="Actions" type="VBoxContainer" parent="Panel_Menu2/MarginActions/HBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Attack" type="Button" parent="Panel_Menu2/MarginActions/HBoxContainer/Actions"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
text = "     Attack     "

[node name="Magic" type="Button" parent="Panel_Menu2/MarginActions/HBoxContainer/Actions"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
text = "     Magic     "

[node name="Actions2" type="VBoxContainer" parent="Panel_Menu2/MarginActions/HBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Item" type="Button" parent="Panel_Menu2/MarginActions/HBoxContainer/Actions2"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
text = "     Item     "

[node name="Dance" type="Button" parent="Panel_Menu2/MarginActions/HBoxContainer/Actions2"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
text = "     Dance     "

[node name="Player_1" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.996078)
visibility_layer = 17
layout_mode = 2
offset_left = 49.2003
offset_top = 346.142
offset_right = 305.2
offset_bottom = 547.142
size_flags_vertical = 4
texture = ExtResource("3_8u46x")
stretch_mode = 2

[node name="Fireball" type="AnimatedSprite2D" parent="Player_1"]
modulate = Color(1, 1, 1, 0)
light_mask = 17
visibility_layer = 16
z_index = -1
position = Vector2(179.863, 76.58)
rotation = -3.14159
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_5qdkq")
autoplay = "default"
frame_progress = 0.0550403

[node name="onEnemyHit" type="AnimatedSprite2D" parent="Player_1"]
z_index = 1
position = Vector2(686.909, 78.8493)
sprite_frames = SubResource("SpriteFrames_pvakd")
animation = &"slash"
frame = 20
frame_progress = 1.0

[node name="EnemyHP" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_left = 607.341
offset_top = 512.576
offset_right = 898.341
offset_bottom = 542.576
theme_override_constants/outline_size = 0
theme_override_styles/background = SubResource("StyleBoxFlat_1bj0i")
theme_override_styles/fill = SubResource("StyleBoxFlat_7ew2d")
max_value = 1e+10
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyHP"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_right = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "HP: 25/50"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 536.364
offset_top = 80.6643
offset_right = 920.364
offset_bottom = 522.664
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="Enemy" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_lio13")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(472.645, 324.699)
scale = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1160
limit_bottom = 648
editor_draw_limits = true

[connection signal="pressed" from="Panel_Menu2/MarginActions/HBoxContainer/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Panel_Menu2/MarginActions/HBoxContainer/Actions/Magic" to="." method="_on_magic_pressed"]
